network-policies/v4-cart-redis/cart-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cart-egress-redis
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: cartservice
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: redis-cart
    ports:
    - protocol: TCP
      port: 6379
